css/contactme.css
@import url("https://fonts.googleapis.com/css2?family=Montaga&family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

body {
  background: #000;
}

html::-webkit-scrollbar {
  width: 0.5em;
}

html::-webkit-scrollbar-track {
  box-shadow: none;
  background: #000;
}

html::-webkit-scrollbar-thumb {
  background: #fff;
  border-radius: 15px;
  border: none;
}

.nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background: #000000;
  color: #fff;
  z-index: 999;
}

header {
  display: flex;
  flex-direction: column;
  height: auto;
  color: #fff;
  background: #000000;
}

.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.25rem 1rem;
}

.name {
  font-size: 1.5rem;
  font-weight: 500;
  margin: 1.2rem;
  padding-top: 0.5rem;
  text-decoration: none;
  color: #fff;
}

.hamburger-btn {
  background: none;
  width: 2rem;
  background: none;
  margin-right: 1rem;
}

.hamburger-btn span {
  display: block;
  height: 2px;
  background: #fff;
  margin: 8px 0;
  transition: all 0.3s ease-in-out;
}

.nav-links {
  height: 0;
  overflow: hidden;
  list-style-type: none;
  background: #333333;
  transition: all 0.3s ease-in-out;
}

.single-link {
  display: block;
  text-decoration: none;
  font-size: 1.2rem;
  padding: 0.5rem;
  margin: 0.5rem 0;
  text-align: right;
  color: #fff;
  transition: all 0.3s ease-in;
}
.single-link:hover {
  color: #111;
  background: #eeeeee;
  transform: translateX(-0.5rem);
}
.current {
  color: #111;
  background: #eeeeee;
}

.show-links {
  height: 205px;
}

.hamburger-btn.animate span:nth-child(1) {
  transform: rotate(135deg);
  top: 18px;
}

.hamburger-btn.animate span:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.hamburger-btn.animate span:nth-child(3) {
  transform: rotate(-135deg);
  top: 18px;
}

@media screen and (min-width: 768px) {
  html::-webkit-scrollbar {
    width: 1em;
  }
  .hamburger-btn {
    display: none;
  }
  .name {
    margin: 0;
    padding: 0;
  }
  .nav-header {
    margin: 1rem;
    padding: 1rem;
  }
  .nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .nav-links {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    height: auto;
    background: none;
  }
  .single-link {
    margin: 1.2rem;
    flex: 1 0 auto;
  }
  .single-link:hover {
    transform: unset;
  }
}
.hero-container {
  position: relative;
  top: 5rem;
  height: auto;
  /* flex: 1 0 auto; */
}

.hero-heading {
  font-family: "Montaga";
  font-size: 2rem;
  letter-spacing: 0.2rem;
  margin: 8rem 0 2rem 0;
  padding: 0.5rem 0;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .hero-heading {
    font-size: 4rem;
  }
}

/* Contact Me */

.contactme {
  padding: 3rem 0;
  padding-bottom: 5rem;
  margin-bottom: 10rem;
  height: auto;
}
.contactme-container {
  max-width: 90vw;
  margin: 3rem auto;
  background: #fff;
  border-radius: 20px;
}

.myinfo-container {
  color: #000000;
  display: flex;
  justify-content: center;
  background: #79cef9;
  border-radius: 20px;
  padding: 2rem 0;
}

.myinfo-interior-container {
  margin: 2rem 0;
}

.myinfo-heading,
.myinfo-para,
.myinfo-small-heading {
  margin-left: 1rem;
}

.myinfo-heading {
  margin-bottom: 1rem;
  letter-spacing: 0.1rem;
  font-size: 1.5rem;
}

.myinfo-para {
  color: #333333;
  margin-bottom: 2.5rem;
  max-width: 20rem;
}

.myinfo-small-heading {
  margin-bottom: 2rem;
  color: #333333;
}

.contact-links {
  text-decoration: none;
  color: inherit;
  transition: all 0.3s ease-out;
}

.contact-links:hover {
  color: #002092;
}

.myinfo-small {
  margin-left: 1rem;
}

.contactme-form-container {
  max-width: 75vw;
  margin: 2rem auto;
}

.label-input-container {
  color: #000;
  margin: 1rem auto;
}
.label-input-container label {
  display: block;
  color: #222222;
}
.label-input-container input,
textarea {
  width: 90%;
  border: none;
  border-bottom: 2px solid #aaa;
  height: 2rem;
  margin-top: 0.8rem;
  outline: none;
  background: rgb(248, 248, 248);
  padding: 1rem;
}

.label-input-container input:focus,
textarea:focus {
  border-bottom: 3px solid #79cef9;
  background: rgb(252, 252, 252);
}

.label-input-container input::placeholder,
textarea::placeholder {
  opacity: 0.5;
  font-weight: lighter;
}

.radio-container label {
  display: inline-block;
  padding: 0.2rem 0;
  margin-left: 0.5rem;
  cursor: pointer;
}

.radio-container {
  margin: 0.5rem 0;
}

.label-input-container input[type="radio"] {
  width: unset;
  height: unset;
  cursor: pointer;
}

.label-input-container input[type="submit"] {
  border-bottom: none;
  cursor: pointer;
  background: #06248f;
  color: #eee;
  border-radius: 6px;
  height: 3rem;
  font-size: 1.2rem;
  margin: 1rem 0 2rem 0;
  transition: all 0.3s ease;
}

.label-input-container input[type="submit"]:hover {
  background: #daff36;
  color: #000;
}

textarea {
  height: 4rem;
  width: 95%;
}

@media screen and (min-width: 928px) {
  .contactme-container {
    display: flex;
    justify-content: space-between;
  }
  .myinfo-container {
    flex: 0 0 40%;
  }

  .myinfo-interior-container {
    background: url("../media/vectors/contactme-vector.svg") no-repeat;
    background-size: contain;
    background-position-y: 100%;
  }

  .myinfo-para {
    font-size: 1.2rem;
    line-height: 1.8rem;
  }

  .myinfo-small-heading {
    font-size: 1.2rem;
    margin-top: 3rem;
  }

  .contactme-form-container {
    flex: 0 0 55%;
    display: grid;
    margin: 4rem auto;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
    gap: 2rem 0.5rem;
    grid-template-areas:
      "first second"
      "third fourth"
      "options options"
      "message message";
  }
  .first {
    grid-area: first;
  }
  .second {
    grid-area: second;
  }
  .third {
    grid-area: third;
  }
  .fourth {
    grid-area: fourth;
  }
  .options {
    grid-area: options;
  }
  .message {
    grid-area: message;
  }
  .label-input-container {
    margin: auto 0;
  }

  .label-input-container p {
    font-size: 1.4rem;
  }
  .radio-container {
    display: inline-block;
    padding: 0 1rem;
    padding-top: 1.2rem;
  }
  .radio-container label {
    padding-bottom: 1rem;
    font-size: 1.1rem;
  }
  .radio-container input[type="radio"] {
    padding: 0;
    margin: 0;
  }
}

/* Footer */
.footer {
  background: #fff;
  color: #000;
  padding: 2rem;
  text-align: center;
}

.footer-text {
  letter-spacing: 0.1rem;
  margin: 1rem;
  font-size: 0.8rem;
}

.footer-icon {
  text-decoration: none;
  color: #000;
  font-size: 1.5rem;
  margin: 0.5rem 0.5rem;
  padding: 0.5rem 0.5rem;
  transition: all 0.3s ease;
}

.footer-icon:hover {
  background: #222;
  color: #eee;
}

